After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 764299 - Strange cursor artifacts
Strange cursor artifacts
Status: RESOLVED FIXED
Product: vte
Classification: Core
Component: general
0.44.x
Other Linux
: Normal major
: ---
Assigned To: VTE Maintainers
VTE Maintainers
: 764560 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2016-03-29 03:42 UTC by Michael Heyns
Modified: 2016-04-04 04:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screencast (72.76 KB, video/x-matroska)
2016-03-29 03:42 UTC, Michael Heyns
  Details
script recording @ 157 x 54 (13.92 KB, text/plain)
2016-03-29 06:37 UTC, Michael Heyns
  Details
script recording - timing (2.97 KB, text/plain)
2016-03-29 06:38 UTC, Michael Heyns
  Details
Fix (969 bytes, patch)
2016-03-29 10:22 UTC, Egmont Koblinger
none Details | Review

Description Michael Heyns 2016-03-29 03:42:20 UTC
Created attachment 324917 [details]
screencast

As of version 0.44, I experience a strange cursor glitch. Not sure how to describe it. I have attached a screencast to demonstrate.

It happens consistently in vim but now and then in neovim and zsh prompt.

I have tested multiple vte based terminal emulators, multiple configurations and a fresh install. All the same.

This does not occur with 0.42 installed. It still exists with the current master.
Comment 1 Egmont Koblinger 2016-03-29 05:04:25 UTC
Could you please record a "script" session of this bug occurring, along with timing?

E.g. "script -t 2>timing", then vim..., then exit from vim, exit from the shell, and attach both "typescript" and "timing" to this bug? Please also take note of the exact window size (as reported e.g. by "stty size").

Does replaying the script with "scriptreplay -t timing" (in a window of the same size) also reproduce the glitch for you?

Also, what's the exact 0.42 version? Could you please try vte-0-42 from git, or the 0.42.5 tarball? There was a cursor related change between 0.42.4 and 0.42.5, I'm curious if it brought any regression (although I find it very unlikely).
Comment 2 Michael Heyns 2016-03-29 06:36:49 UTC
Very useful utilities I didn't know of!

The versions I tested against were from the corresponding git branches:

vte-0-42 - 0.42.6.3493.e62b98c
vte-0-44 - 0.44.1.3932.0af9012
master   - 0.45.0.3936.8bc51bb

Replaying the script indeed reproduces the glitches.
Comment 3 Michael Heyns 2016-03-29 06:37:50 UTC
Created attachment 324919 [details]
script recording @ 157 x 54
Comment 4 Michael Heyns 2016-03-29 06:38:29 UTC
Created attachment 324920 [details]
script recording - timing
Comment 5 Egmont Koblinger 2016-03-29 07:53:47 UTC
Thanks, I can also reproduce the problem by replaying the recording.
Comment 6 Egmont Koblinger 2016-03-29 08:17:38 UTC
423063840d1304fdd7ff2d87f2041e70a07f599a is the first bad commit
commit 423063840d1304fdd7ff2d87f2041e70a07f599a
Author: Christian Persch <chpe@gnome.org>
Date:   Fri Nov 20 20:58:31 2015 +0100

    widget: Move some methods to VteTerminalPrivate

:040000 040000 0a8b8e809b3634061a0a39bed406076647b54df6 22b9b5c1d64748c3cb2b5f5a89077d1593e6e449 Msrc
Comment 7 Egmont Koblinger 2016-03-29 10:22:55 UTC
Created attachment 324934 [details] [review]
Fix

Could you please test this patch?

Note: The first FIXME was indeed valid and this needed to be fixed. I don't see the point in the second FIXME, since it's in the branch where saved_cursor and cursor are the same position, so the code is just correct there.
Comment 8 Egmont Koblinger 2016-03-30 08:51:23 UTC
Fixed on master and vte-0-44 (0.44.1). Older branches were not affected.
Comment 9 Michael Heyns 2016-03-30 09:13:24 UTC
Hi, Egmont. Sorry for not responding sooner, timezones and all.

I can confirm that the recent change fixes the problem.

A very sincere thank you for all effort involved. All the best!
Comment 10 Egmont Koblinger 2016-04-04 04:04:33 UTC
*** Bug 764560 has been marked as a duplicate of this bug. ***