widget: Properly remove the cursor from its old position

https://bugzilla.gnome.org/show_bug.cgi?id=764299
(cherry picked from commit e5a00b5b71194be9f2881dee67d82c308406dea7)